Termos e condições, segurança, ajuda e sobre o projeto

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,10 +2,10 @@
     <div class="container-footer">
         <div class="logo-footer"><img src="/assets/image/logoWorkFlow-nome.svg" alt="Logo"></div>
         <div class="links-footer">
-            <a href="">Termos e Condições</a>
-            <a href="">Privacidade</a>
-            <a href="">Ajuda</a>
-            <a href="">Conheça o projeto</a>
+            <a href="/termos">Termos e Condições</a>
+            <a href="/privacidade">Privacidade</a>
+            <a href="/ajuda">Ajuda</a>
+            <a href="https://workflow-landing-page-livid.vercel.app/" target="_blank" rel="noopener noreferrer">Conheça o projeto</a>
         </div>
     </div>
 </footer>
