Modais não - logado e mudanças nos primeiros passos

--- a/public/css/globals/variables.css
+++ b/public/css/globals/variables.css
@@ -24,7 +24,7 @@
     --warning: #FF8E0C;
     --warning-dark: #A06420;
     --alert: #F84241;
-    --alert-dark: #863534;
+    --alert-dark: #330c0c;
 
     /* ===== SISTEMA DE TIPOGRAFIA ===== */
     
