--- a/views/base.ejs
+++ b/views/base.ejs
@@ -21,13 +21,15 @@
     </script>
     <%- include('partials/navbar') %>
 
-    <%- include(view) %>
-    
-    <%- include('partials/footer') %>
+        <%- include(view) %>
+
+            <%- include('partials/footer') %>
 
                 <script src="js/hamburguer.js"></script>
                 <script src="/js/scroll.js"></script>
                 <script src="/js/nav.js"></script>
+                <script type="module" src="/js/suspensao.js"></script>
+
 
 
 </body>
