--- a/public/css/globals/variables.css
+++ b/public/css/globals/variables.css
@@ -19,8 +19,8 @@
 
     --primary: #4276FE;
     --primary-dark: #35436A;
-    --success: #35436A;
-    --success-dark: #35436A;
+    --success: #01B671;
+    --success-dark: #0A3424;
     --warning: #FF8E0C;
     --warning-dark: #A06420;
     --alert: #F84241;
