--- a/public/css/components/nav.css
+++ b/public/css/components/nav.css
@@ -1,3 +1,5 @@
+@import "notification.css";
+
 body {
     margin: 0;
     padding: 0;
@@ -28,6 +30,10 @@ body {
     flex-wrap: nowrap;
     white-space: nowrap;
     transition: transform 0.2s ease-in-out;
+}
+
+.container-row {
+    display: flex;
 }
 
 .navbar--hidden {
@@ -198,6 +204,12 @@ body {
         padding-top: 20px;
     }
 
+    .container-row {
+        display: none;
+    }
+
+
+
     .links, .searchbarContainer {
         display: none;
         width: 100%;
@@ -309,15 +321,11 @@ body {
     }
 
     .container-row {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        justify-content: space-between;
+        display: none;
     }
 
     .buttonsContainer a {
         width: 100%;
-        height: 70px;
         margin: 0;
         padding: 0;
     }
