--- a/views/base.ejs
+++ b/views/base.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/components/background.css">
     <link rel="stylesheet" href="/css/components/nav.css">
     <link rel="stylesheet" href="/css/components/footer.css">
+    <link rel="stylesheet" href="/css/globals/globals.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
