--- a/views/index.ejs
+++ b/views/index.ejs
@@ -214,6 +214,10 @@
     </div>
 
     <style>
+        .categorias :hover{
+            background-color: #5274D9;
+            color: white;
+        }
         .island-btn.like-btn.curtido svg path {
             fill: #F84241;
             stroke: white;
