--- a/public/css/proposals/partials/layout.css
+++ b/public/css/proposals/partials/layout.css
@@ -33,11 +33,52 @@ h1 {
     flex: 4;
 }
 
+.filterMobileButton {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+}
+
+.filterMobileModal {
+    position: fixed;
+    top: 50%;
+    width: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.95);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    pointer-events: none;
+}
+
+.filterMobileModal.open {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+    pointer-events: auto;
+}
+
+.filterMobileModal.closing {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.95);
+    pointer-events: none;
+}
+
+dialog::backdrop {
+    backdrop-filter: blur(10px);
+    background: rgba(0, 0, 0, 0.2);
+}
+
+
+
 
 
 @media (max-width: 812px) {
-   .section2 {
-        flex-direction: column;
+    .container-filter {
+        display: none;
     }
     .propostas {
         width: 100%;
@@ -45,4 +86,14 @@ h1 {
     .filtro {
         width: 100%;
     } 
+
+    .filterMobileButton {
+        display: flex;
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        bottom: 100px;
+        z-index: 1000;
+        aspect-ratio: 1 / 1;
+    }
 }
